--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/pg": "^7.14.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
